test/testdata/classes/missing_property_error.lox
class Foo {}

// error: 'Foo class' object has no property 'bar'
// lint warning: 'Foo' class has no static property 'bar'
print Foo.bar;
